--- a/data_explore/data_prep.Rmd
+++ b/data_explore/data_prep.Rmd
@@ -227,6 +227,7 @@ iucn_spp_cells <- iucn_spp_cells %>%
   filter(presence != 5)
 ### length(unique(iucn_spp_cells$iucn_sid)) results in 2013 species found...
 ### some species with no cells reported.  2249 listed in the am v iucn file.
+write_csv(iucn_spp_cells, file.path(dir_anx, 'explore_am_v_iucn/iucn_spp_cells_2015.csv'))
 
 message('Loading AquaMaps species to cell table.  This might take a few minutes.')
 am_spp_cells <- fread(file.path(dir_data_remote, 'aquamaps/v2015/csv/hcaf_sp_native_trunc.csv'), 
@@ -235,6 +236,7 @@ am_spp_cells <- am_spp_cells %>%
   rename(am_sid = speciesid, prob = probability) %>%
   filter(am_sid %in% spp_am_v_iucn$am_sid)
 ### length(unique(am_spp_cells$am_sid)) results in 2283 species found - great!
+write_csv(am_spp_cells, file.path(dir_anx, 'explore_am_v_iucn/am_spp_cells_2015.csv'))
 
 loiczid_raster_file  <- file.path(dir_git, 'shiny/data/loiczid_raster.grd')
 loiczid_raster       <- raster(loiczid_raster_file)
